# straight-skeleton

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.dev.json  webpack.config.js
example/: index.html  main.js
src/core/: CMakeLists.txt  install_libraries.sh  main.cpp
src/example/: index.html  index.ts
src/lib/: EdgeResult.ts  LavUtil.ts  Skeleton.ts  SkeletonBuilder.ts  Utils.ts  index.ts
src/lib/Circular/: CircularList.ts  CircularNode.ts  Edge.ts  Vertex.ts
src/lib/Events/: EdgeEvent.ts  MultiEdgeEvent.ts  MultiSplitEvent.ts  PickEvent.ts  SkeletonEvent.ts  SplitEvent.ts  VertexSplitEvent.ts
src/lib/Events/Chains/: ChainType.ts  EdgeChain.ts  IChain.ts  SingleEdgeChain.ts  SplitChain.ts
src/lib/Path/: FaceNode.ts  FaceQueue.ts  FaceQueueUtil.ts  PathQueue.ts  PathQueueNode.ts
src/lib/Primitives/: LineLinear2d.ts  LineParametric2d.ts  PrimitiveUtils.ts  PriorityQueue.ts  Vector2d.ts
src/wrapper/: index.d.ts  index.ts
